<resources>
    <string name="app_name">Business Book</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">BusinessBook</string>
    <string name="title_home">Home</string>
    <string name="title_reports">Reports</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slogan_message_text">Take your company with you always ...</string>

    <string name="text_mobile_number">mobile number</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>

    <string name="title_activity_login">Register or Login</string>

    <string name="login_phone_button_label">LOGIN WITH PHONE NUMBER</string>
    <string name="login_email_button_label">LOGIN WITH EMAIL</string>
    <string name="facebook_app_id">217458915684407</string>
    <string name="account_kit_client_token">5260fa10c8e58f1c207e9374bd129de8</string>
    <string name="ak_login_protocol_scheme">ak5260fa10c8e58f1c207e9374bd129de8</string>

    <string name="password_hint_login">Password</string>
    <string name="email_hint_login">Email</string>
    <string name="sign_in_button">Login</string>


    <string name="title_activity_local">About Local</string>
    <string name="mock_text">Mock Text</string>
    <string name="local_name_hint">Local Name</string>
    <string name="title_activity_item">Item</string>
    <string name="about_text_card">about</string>

    <string name="title_activity_provider">ProviderActivity</string>
    <string name="TAG_app">businessbook</string>
    <string name="hint_local_direction">Local Direction</string>
    <string name="hint_provider_name">Name</string>
    <string name="hint_provider_phone">Phone</string>
    <string name="hint_provider_email">Email</string>
<<<<<<< HEAD
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_client">ClientActivity</string>
=======
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
>>>>>>> c3e12409b716ebb0970b57db81ac575331c12f6a
</resources>
