<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".viewcontrollers.activities.OnBoardActivity"
    tools:showIn="@layout/activity_on_board">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/name_company"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_message"
        />
    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan_message_text"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_company_name"
        app:layout_constraintBottom_toTopOf="@id/button_phone_login"/>

    <Button
        android:id="@+id/button_phone_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/login_phone_button_label"
        app:layout_constraintBottom_toTopOf="@id/button_email_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onPhoneLogin"
        style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
        android:id="@+id/button_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_email_button_label"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onEmailLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        />

</android.support.constraint.ConstraintLayout>